--- a/ont.activity/pom.xml
+++ b/ont.activity/pom.xml
@@ -1,35 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-  	<groupId>org.universAAL.ontology.services</groupId>
-	<artifactId>ont.pom</artifactId>
-	<version>1.3.1-SNAPSHOT</version>
+    <groupId>org.universAAL.ontology.services</groupId>
+    <artifactId>ont.pom</artifactId>
+    <version>1.3.1-SNAPSHOT</version>
   </parent>
-
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.activity</artifactId>
-  <version>1.3.1-SNAPSHOT</version>
+  <version>1.3.2-SNAPSHOT</version>
   <name>Activity</name>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.data.representation.core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.container.xfaces.core</artifactId>
-    </dependency>
-    <dependency>
-    	<groupId>org.universAAL.ontology</groupId>
-    	<artifactId>ont.phWorld</artifactId>
-    </dependency>
-    <dependency>
-    	<groupId>org.universAAL.ontology</groupId>
-    	<artifactId>ont.profile</artifactId>
-    </dependency>
-  </dependencies>
- 
   <build>
     <plugins>
       <plugin>
