--- a/ontologies/ont.pom/pom.xml
+++ b/ontologies/ont.pom/pom.xml
@@ -25,6 +25,10 @@
     <module>../ont.aalfficiencyscores</module>
     <module>../ont.fitbitdata</module>
     <module>../ont.readenergy</module>
+    <module>../ont.medication</module>
+    <module>../ont.nutrition</module>
+    <module>../ont.safety</module>
+    <module>../ont.shopping</module>
   </modules>
   <scm>
     <connection>${svn.base}/${project.artifactId}</connection>
@@ -44,10 +48,10 @@
   <properties>
     <remoteOBR></remoteOBR>
     <svn.base.url>${gforge.project.url}/scmsvn/?path=%2Fnew_services%2Ftrunk%2F</svn.base.url>
-    <gforge.project.url>http://forge.universaal.org/gf/project/new_services</gforge.project.url>
-    <svn.base>scm:svn:http://forge.universaal.org/svn/new_services/trunk/${gforge.project.name}</svn.base>
-    <separatedGroupIds>org.universAAL.middleware</separatedGroupIds>
     <gforge.project.name>ontologies</gforge.project.name>
+    <separatedGroupIds>org.universAAL.middleware</separatedGroupIds>
+    <svn.base>scm:svn:http://forge.universaal.org/svn/new_services/trunk/${gforge.project.name}</svn.base>
+    <gforge.project.url>http://forge.universaal.org/gf/project/new_services</gforge.project.url>
     <maven.compile.source>1.4</maven.compile.source>
     <maven.compile.target>1.4</maven.compile.target>
   </properties>
@@ -56,57 +60,57 @@
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.agenda</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.agendaEventSelection</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.message</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.questionnaireStrategy</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.biomedicalsensors</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.ltba</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.activity</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.aalfficiencyscores</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.drools</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.fitbitdata</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.readenergy</artifactId>
-        <version>1.3.1-SNAPSHOT</version>
+        <version>1.3.2-SNAPSHOT</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
