--- a/agenda/agenda.runner/runner/felix/system.properties
+++ b/agenda/agenda.runner/runner/felix/system.properties
@@ -7,30 +7,30 @@
 felix.log.level=4
 #http://blog.synyx.de/2010/04/know-your-apis-lessons-learned-from-resourcebundle/
 user.language=en
-osgi.noShutdown=true
-org.universAAL.middleware.peer.is_coordinator=true
-org.universAAL.middleware.peer.member_of=urn:org.universAAL.aal_space:test_environment
+
+
+#net.slp.DAAddresses=146.48.81.151
+net.slp.port=5555
+java.net.preferIPv4Stack=true
+net.slp.multicastTimeouts=500,750
 bundles.configuration.location=configurations/
 
-felix.upnpbase.exporter.enabled=true
-felix.upnpbase.importer.enabled=true
-felix.upnpbase.cyberdomo.log=false
-felix.upnpbase.cyberdomo.net.loopback=false
-felix.upnpbase.cyberdomo.net.onlyIPV4=true
-felix.upnpbase.cyberdomo.net.onlyIPV6=false
-cyberdomo.ssdp.mx=5
-cyberdomo.ssdp.buffersize=2048
-cyberdomo.ssdp.port=13531
+#for offline work uncomment line below
+#-Dnet.slp.intefaces=127.0.0.1
 
-#web handler (ri.servicegateway) listen port
+
+#web handler (ri.servicegateway; jetty) listen port
 org.osgi.service.http.port=8088
 #mitigates timeout error on web handler: "An existing connection was forcibly closed by the remote host"
 org.apache.felix.http.session.timeout=0
+#Connection timeout in milliseconds. The default is 60000 (60 seconds).
 org.apache.felix.http.timeout=50000
 
 ui.dm.systemMenuProvision=task
-# in miliseconds, no recommended more than 500 miliseconds
+# in milliseconds, not recommended more than 500 milliseconds
 ui.dm.finalizeWait=150
+#time frame for retrieving UI Preferences from Profiling Server (in miliseconds)
+ui.dm.contactProfilingServer.wait=15000
 
 org.universAAL.ucc.viewjambi.rundir=/
 
