--- a/ontologies/ont.nutrition/pom.xml
+++ b/ontologies/ont.nutrition/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.nutrition</artifactId>
-	<version>${parent.version}</version>
+	<version>1.3.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>Nutritional Advisor Service - Ontology</name>
 	<description>Ontology for the services that manage Context History</description>
@@ -27,18 +27,6 @@
 		</license>
 	</licenses>
 	<dependencies>
-		<dependency>
-			<groupId>org.universAAL.support</groupId>
-			<artifactId>itests</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service.core</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
@@ -59,7 +47,7 @@
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.ontology.nutrition</Export-Package>
+						<Export-Package>org.universAAL.ontology.nutrition,org.universAAL.ontology.nutrition.profile</Export-Package>
 						<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
 					</instructions>
 				</configuration>
