--- a/ontologies/ont.aalfficiencyscores/pom.xml
+++ b/ontologies/ont.aalfficiencyscores/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <groupId>org.universAAL.ontology.services</groupId>
     <artifactId>ont.pom</artifactId>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>1.3.3-SNAPSHOT</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.aalfficiencyscores</artifactId>
-  <version>1.3.2-SNAPSHOT</version>
+  <version>1.3.3-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>AALfficiency Service - Scores ontology</name>
+  <name>AALfficiency Service - Scores Ontology</name>
   <build>
     <plugins>
       <plugin>
