--- a/ontologies/ont.ltba/pom.xml
+++ b/ontologies/ont.ltba/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.2-SNAPSHOT</version>
+		<version>1.3.3-SNAPSHOT</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.ltba</artifactId>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.3-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>LTBA Service - Ontology</name>
 	<description>The Long Term Behaviour Analyzer Ontologies</description>
@@ -48,7 +48,7 @@
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package>org.universAAL.ontology.ltba</Export-Package>
-						<Private-Package>org.universAAL.ontology</Private-Package>
+						<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
 					</instructions>
 				</configuration>
 			</plugin>
