--- a/ont.biomedicalsensors/pom.xml
+++ b/ont.biomedicalsensors/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.2-SNAPSHOT</version>
+		<version>1.3.3-SNAPSHOT</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.biomedicalsensors</artifactId>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.3-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<name>Medication Service - The Biomedical Sensors ontology</name>
+	<name>Medication Service - The Biomedical Sensors Ontology</name>
 	<description>An ontology defining the most general concepts from Biomedical Sensors.</description>
 	<dependencies>
 		<dependency>
