--- a/ont.medication/pom.xml
+++ b/ont.medication/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.universAAL.ontology</groupId>
+		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
 		<version>1.3.3-SNAPSHOT</version>
 		<relativePath>../ont.pom</relativePath>
