--- a/agenda/agenda.feature/pom.xml
+++ b/agenda/agenda.feature/pom.xml
@@ -5,9 +5,11 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>D.2.1-SNAPSHOT</version>
+		<version>D.3.1-SNAPSHOT</version>
+		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.feature</artifactId>
+		<version>D.3.1-SNAPSHOT</version>
 	<name>Agenda AAL Service Karaf Feature</name>
 	<description>Artifact representing represeting the Karaf feature for the Agenda AAL Service</description>
 
