--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -17,12 +17,13 @@
 
 	<modules>
 		<module>../ontologies/ont.pom</module>
-		<module>../health/health.pom</module>
-		<module>../personal_safety/personal_safety.pom</module>
+	<!--	<module>../health/health.pom</module> 
+		<module>../personal_safety/personal_safety.pom</module> -->
 		<module>../food_shopping/pom</module>
 		<module>../safety_home/pom</module>
 		<module>../medication/medication.manager.pom</module>
 		<module>../agenda/agenda.pom</module>
+		<module>../aal_eficiency/AALfficiency.pom</module>
 	</modules>
 
 	<properties>
